pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong
  ports:
  - port: 30081
    protocol: TCP
    targetPort: 3001
